--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,11 +319,11 @@ transform: scale(1.2);
 .math-symbol {
     position: absolute;
     font-size: 24px;
-    color: #1a1a1a; /* Grey color for symbols */
+    color: black; /* Grey color for symbols */
     pointer-events: auto; /* Allow interaction with symbols */
     transition: transform 0.2s, opacity 0.2s;
 }
 
 .math-symbol:hover {
-    animation: bubblePop 0.5s forwards;
+    animation: bubblePop 0.9s forwards;
 }
