--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,21 +13,19 @@
     <div class="header-links-left">
       <a href="https://www.linkedin.com/in/eugenio-macias/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
       <a href="mailto:eugenio_macias_orozco@brown.edu" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
-      <a href="assets/files/resume.pdf" target="_blank" title="Resume><i class="fas fa-file-alt"></i></a>
+      <a href="assets/files/resume.pdf" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a>
     </div>
     <h1>{{ site.title }}</h1>
     <div class="header-links-right">
-      <a href="https://www.chess.com/member/eugenio_macias" target="_blank" title="Chess.com><i class="fas fa-chess"></i></a>
-      <a href="https://open.spotify.com/user/eugenio.d.macias?si=3eaebf1bfa0e4e51" target="_blank" title="Spotify><i class="fab fa-spotify"></i></a>
+      <a href="https://www.chess.com/member/eugenio_macias" target="_blank" title="Chess.com"><i class="fas fa-chess"></i></a>
+      <a href="https://open.spotify.com/user/eugenio.d.macias?si=3eaebf1bfa0e4e51" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
       <a href="https://www.instagram.com/eugenio_macias/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
     </div>
   </header>
   <main id="content">
     {{ content }}
-    {% if page.title == "Home" %}
-    <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic">
+    <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic center">
     <div id="math-symbols-container"></div>
-    {% endif %}
   </main>
   <footer>
     <ul>
