--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
       <li><a href="{{ '/classes-i-have-taken' | relative_url }}"><span>Classes I Have Taken</span></a></li>
       <li><a href="{{ '/awards' | relative_url }}"><span>Awards</span></a></li>
       <li><a href="{{ '/projects' | relative_url }}"><span>Projects</span></a></li>
+      <li><a href="{{ '/notes' | relative_url }}"><span>Notes</span></a></li>
       <li><a href="{{ '/music-repertoire' | relative_url }}"><span>Music Repertoire</span></a></li>
       <li><a href="{{ '/skills-interests' | relative_url }}"><span>Skills & Interests</span></a></li>
     </ul>
