--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,20 @@
 @import url('https://fonts.cdnfonts.com/css/cascadia-code');
+.page-transition {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white; /* Change to the color you want */
+  z-index: 9999;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
 
+.page-transition-active {
+  opacity: 1;
+} 
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
