--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
+  <div id="page-transition" class="page-transition"></div>
   <header>
     <div class="header-links-left">
       <a href="https://www.linkedin.com/in/eugenio-macias/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
