--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,18 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: white;
+  background: darkgrey;
   z-index: 9999;
   pointer-events: none;
   transform-origin: center center;
-  transition: transform 1s ease-in-out, opacity 1s ease;
   opacity: 1;
+  transition: transform 0.8s ease-in-out, opacity 0.8s ease;
 }
 
 .page-transition-active {
-  transform: scale(0.1) rotate(360deg);
+  transform: perspective(600px) rotateX(90deg) scale(0.5);
   opacity: 0;
-  transition: transform 1s ease-in-out, opacity 1s ease;
+  transition: transform 0.8s ease-in-out, opacity 0.8s ease;
 }
 @keyframes gradient {
     0% {
