--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic center">
     <div id="math-symbols-container"></div>
     {% endif %}
-</main>
+  </main>
   <footer>
     <ul>
       <li><a href="{{ '/' | relative_url }}"><span>Home</span></a></li>
@@ -102,6 +102,38 @@
             setTimeout(() => $(this).remove(), 500);
             setTimeout(createSymbol, 500);
           });
+
+          // Add movement animation
+          const pathType = Math.floor(Math.random() * 6);
+          let pathFunction;
+          switch (pathType) {
+            case 0:
+              pathFunction = x => Math.sin(x / 10) * 10; // sine wave
+              break;
+            case 1:
+              pathFunction = x => Math.cos(x / 10) * 10; // cosine wave
+              break;
+            case 2:
+              pathFunction = x => Math.pow(x / 10, 2); // x^2
+              break;
+            case 3:
+              pathFunction = x => -Math.pow(x / 10, 2); // x^-2
+              break;
+            case 4:
+              pathFunction = x => Math.pow(x / 10, 3); // x^3
+              break;
+            case 5:
+              pathFunction = x => -Math.pow(x / 10, 3); // x^-3
+              break;
+          }
+
+          function moveSymbol(timestamp) {
+            const elapsed = timestamp / 1000;
+            symbol.css('transform', `translate(${elapsed * 20}px, ${pathFunction(elapsed * 20)}px)`);
+            requestAnimationFrame(moveSymbol);
+          }
+
+          requestAnimationFrame(moveSymbol);
 
           container.append(symbol);
         }
