--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ transform: scale(1.2);
 }
 
 .math-symbol:hover {
-    animation: bubblePop 0.5s forwards;
+    opacity = 0;
 }
 
 @keyframes moveSymbol {
@@ -320,17 +320,3 @@ transform: scale(1.2);
   }
 }
 
-@keyframes bubblePop {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    transform: scale(2);
-    opacity: 0.5;
-  }
-  100% {
-    transform: scale(3);
-    opacity: 0;
-  }
-}
