--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       <li><a href="{{ '/awards' | relative_url }}"><span>Awards</span></a></li>
       <li><a href="{{ '/projects' | relative_url }}"><span>Projects</span></a></li>
       <li><a href="{{ '/music-repertoire' | relative_url }}"><span>Music Repertoire</span></a></li>
-      <li><a href="{{ '/skills-interests' | relative_url }}"><span>Skills & Interests</span></a></li>
+      <li><a href="{{ '/skills-interests' | relative_url }}"><span>Skills & More</span></a></li>
     </ul>
   </footer>
   <script src="{{ '/assets/js/symbols.js' | relative_url }}"></script>
