--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ header h1 {
     font-size: 2.8em; /* Increase the header size */
     font-weight: bold; /* Make the header bolder */
     text-align: center; /* Center the header text */
+    font-family: Arial, sans-serif;
 }
 
 
@@ -141,6 +142,7 @@ footer ul li a {
     transition: color 0.3s, text-shadow 0.3s;
     position: relative;
     overflow: hidden;
+    font-family: Arial, sans-serif;
 }
 
 footer ul li a::before {
