--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <main id="content">
     {{ content }}
     {% if page.title == "Home" %}
-    <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic center">
+    <img src="/assets/images/gportfolio_profile_picture.png" class="profile-pic center">
     <div id="math-symbols-container"></div>
     {% endif %}
   </main>
