--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ header h1 {
     font-size: 2.8em; /* Increase the header size */
     font-weight: bold; /* Make the header bolder */
     text-align: center; /* Center the header text */
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', sans-serif;
 }
 
 
