--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
       animateText();
 
       if ($('main').has('#math-symbols-container').length) {
-        const symbols = ['√', 'π', '∑', '∫', '∞', '∂', '∆', '∇', '∫', '∬', '∭', '∮', '∯', '∰', '⊕', '⊗', '∃', '∀', '∴', '∵', '≈', '≠', 'α', 'β', 'γ', 'δ', 'ε', 'ζ', 'η', 'θ', 'ι', 'κ', 'λ', 'μ', 'ν', 'ξ', 'ο', 'π', 'ρ', 'σ', 'τ', 'υ', 'φ', 'χ', 'ψ', 'ω'];
+        const symbols = ['√', 'π', '∑', '∫', '∞', '∂', '∆', '∇', 'Ψ', '∬', '∭', '∮', '∯', '∰', '⊕', 'Θ', '∃', '∀', '∴', '∵', '≈', '≠', 'α', 'β', 'γ', 'δ', 'ε', 'ζ', 'η', 'θ', 'Φ', 'λ', 'μ', 'ξ', 'π', 'Ω', 'σ', 'τ', 'φ', 'χ', 'ψ', 'ω', '∮', '∭', '∯', '∬', '∰', '⨀', '⨂', '⨁', '⨄', '∑', '∏', '∭', '∮', '∰', '∱', '⨇', '⨈', '⨌'];
         const container = $('#math-symbols-container');
 
         function createSymbol() {
