--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <div class="header-links-left">
       <a href="https://www.linkedin.com/in/eugenio-macias/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
       <a href="mailto:eugenio_macias_orozco@brown.edu" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
-      <a href="assets/files/Curriculum Vitae July.pdf" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a>
+      <a href="assets/files/Recruiting Resume.pdf" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a>
     </div>
     <h1>{{ site.title }}</h1>
     <div class="header-links-right">
